--- a/SocialKitchen/user/templates/user/register.html
+++ b/SocialKitchen/user/templates/user/register.html
@@ -6,10 +6,17 @@ create a new account
 {% endblock %}
 {% block content %}
 <div class="registration_form">
-    <form method="post" action="">
+    <form method="POST" action="">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" placeholder="create user">
+        {% for field in form%}
+        <div>
+            <p>{{field.label}}: <br>{{field}}</p>
+
+        {% for error in field.errors %}
+        <small style="color: red;">{{error}}</small>
+            {% endfor %}
+        </div>
+        {% endfor %}
     </form>
 </div>
 
