added submit button for form in index.html

--- a/SocialKitchen/user/templates/user/register.html
+++ b/SocialKitchen/user/templates/user/register.html
@@ -17,6 +17,7 @@ create a new account
             {% endfor %}
         </div>
         {% endfor %}
+        <button type="submit">create</button>
     </form>
 </div>
 
