added styling to registration form and added static directory

--- a/SocialKitchen/user/templates/user/layout.html
+++ b/SocialKitchen/user/templates/user/layout.html
@@ -1,11 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <title>{% block title %} {% endblock %}</title>
     {% block head %}
-    <title>{% block title %}{% endblock %} - My Webpage</title>
     {% endblock %}
   </head>
   <body>
-    <div id="content">{% block content %}{% endblock %}</div>
+    {% block content %}
+    {% endblock %}
   </body>
+ 
 </html>
