Added chef model

--- a/SocialKitchen/user/templates/user/profile.html
+++ b/SocialKitchen/user/templates/user/profile.html
@@ -12,6 +12,7 @@
 
 
 <div class="font-bold text-xl mb-2 px-6 py-4">{{user.username}}</div>
+<div class="font-bold text-xl mb-2 px-6 py-4">📞{{user.profile.contact_number}}</div>
 
 </div>
 </div>
