--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -30,6 +30,7 @@
             <img class="w-full" src="{{recipe.image.url}}">
             <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">{{recipe.name}}</div>
+            <div class="font-bold mb-2">Posted By : <span class="text-indigo-500">{{recipe.chef}}</span></div>
             <p class="text-gray-700 text-base">{{recipe.desc}} </p>
        
             
