--- a/SocialKitchen/user/templates/user/details.html
+++ b/SocialKitchen/user/templates/user/details.html
@@ -6,8 +6,12 @@
 <div class="flex p-10 w-full h-200">
     <img class="w-1/3" src="{{recipe.image.url}}">
     <div class="w-2/3 text-xl ml-10 mt-10">
-        <div class="mt-5">{{recipe.name}}</div>
+        <div class="mt-5 text-green-500">{{recipe.name}}</div>
         <div class="mt-5 text-gray-700">{{recipe.desc}}</div>
+        <div class="mt-5 text-gray-700">
+            Posted By :<a href="{% url 'user:chefprofile' recipe.chef.id %}">{{recipe.chef}}</a>
+           </div>
+        <div class="mt-5 text-gray-700">Contact: {{recipe.chef.profile.contact_number}}</div>
        
      
         
