Design my recipes html page

--- a/SocialKitchen/user/templates/user/base.html
+++ b/SocialKitchen/user/templates/user/base.html
@@ -23,6 +23,7 @@
       <a class="navbar-brand" href="">Social Kitchen</a>
       <a class="navbar-brand" href="/recipes">Recipes</a>
       <a class="navbar-brand" href="/recipes/add">Add Recipe</a>
+      <a class="navbar-brand" href="{%  url 'user:mylistings' %}">My Recipes</a>
       
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
