--- a/SocialKitchen/user/templates/user/mylistings.html
+++ b/SocialKitchen/user/templates/user/mylistings.html
@@ -2,9 +2,25 @@
  
 {% block content %}
 
+<div class="text-2xl m-10 p-10 font-bold">📄 My Recipes</div>
+{% for recipe in recipes%}
+<div class="itemcontainer flex shadow-lg m-10 p-10">
+    <span class="w-1/5">
+        <img class="w-40 h-40" src="{{recipe.image.url}}">
+    </span>
+    <span class="w-1/5">
+        <div class="font-bold text-green-700">{{recipe.name}}</div>
+        <div class="text-gray-500">{{recipe.desc}}</div>
+    </span>
+    <span class="w-1/5 my-10 mx-10">
+        <a class="bg-green-500 text-white font-bold px-5 py-2" href="{% url 'user:update_recipe' recipe.id %}">Edit</a>
+    </span>
+    <span class="w-1/5 my-10 mx-10">
+        <a class="bg-red-500 text-white font-bold px-5 py-2" href="{% url 'user:delete_recipe' recipe.id %}">Delete</a>
+    </span>
+</div>
 
-{{recipes}}
 
 
-
+{%endfor%}
 {% endblock %}  
