--- a/SocialKitchen/user/templates/user/home.html
+++ b/SocialKitchen/user/templates/user/home.html
@@ -29,7 +29,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="home.html" class="logo d-flex align-items-center me-auto me-lg-0">
+      <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1>Social Kitchen <span>.</span></h1>  
@@ -37,10 +37,10 @@
       
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="" style="text-decoration:none;" >Home</a></li>
+          <li><a href="#about" style="text-decoration:none;" >About</a></li>
+          <li><a href="#gallery" style="text-decoration:none;" >Gallery</a></li>
+          <li><a href="#contact" style="text-decoration:none;">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
      
