--- a/SocialKitchen/user/templates/user/loginpage.html
+++ b/SocialKitchen/user/templates/user/loginpage.html
@@ -1,25 +1,43 @@
 {% extends './home.html' %}
 <!DOCTYPE html>
 <html>
+  {%load static%}
  {% block content %}  
 <head>
+  <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">
 	<title>Login</title>
-	<style>
-    .mainclass {
-      background: #84fab0;
-      background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
-      background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5))
-    }
-    .gradient-custom-4 {
-    background: #84fab0;
-    background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1));
-    background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
-  }
-	</style>
+
 
 </head>
 <body>
-<section class="mainclass">
+
+  <header id="header" class="header fixed-top d-flex align-items-center">
+    <div class="container d-flex align-items-center justify-content-between">
+  
+      <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <h1>Social Kitchen <span>.</span></h1>  
+      </a>
+      
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="/" style="text-decoration:none;" >Home</a></li>
+          <li><a href="/#about" style="text-decoration:none;" >About</a></li>
+          <li><a href="/#gallery" style="text-decoration:none;" >Gallery</a></li>
+          <li><a href="/#contact" style="text-decoration:none;">Contact</a></li>
+        </ul>
+      </nav><!-- .navbar -->
+      <a class="btn-book-a-table" href="/loginpage">Login</a>
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+  
+    </div>
+  </header><!-- End Header -->   
+
+
+
+<section class="mainclass" style="background-image: url('{% static "user/images/cook1.jpg" %}'); background-repeat: no-repeat; background-size: cover;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
