--- a/SocialKitchen/user/templates/user/delete.html
+++ b/SocialKitchen/user/templates/user/delete.html
@@ -16,7 +16,9 @@
 </div>
 
 <div>
-    <img src="{{recipe.image.url}}">
+   
+            <img class="w-full" src="{{ recipe.image.url }}">
+            
 </div>
 
 <input class="bg-red-500 text-white px-5 py-2" type="submit" name="Confirm" value="Confirm">
