--- a/SocialKitchen/user/templates/user/home.html
+++ b/SocialKitchen/user/templates/user/home.html
@@ -43,9 +43,10 @@
           <li><a href="#contact" style="text-decoration:none;">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
-     
       
-      <a class="btn-book-a-table" href="/loginpage">Login</a>
+
+      
+      <a class="btn-book-a-table"style="text-decoration:none;" href="/loginpage">Login</a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -61,7 +62,7 @@
           
           <p data-aos="fade-up" data-aos-delay="100"> "Cooking is all about people. Food is maybe the only universal thing that really has the power to bring everyone together. No matter what culture, everywhere around the world, people get together to eat."</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="/registerpage" class="btn-book-a-table">Sign Up</a>
+            <a href="/registerpage" style="text-decoration:none;" class="btn-book-a-table">Sign Up</a>
             <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
           
