--- a/SocialKitchen/user/templates/user/updaterecipe.html
+++ b/SocialKitchen/user/templates/user/updaterecipe.html
@@ -1,5 +1,6 @@
 {% extends 'user/base.html' %}
 {% block content %}
+<div class="pt-20">
 <h1 class="text-2xl m-10 font-bold"> + Update Recipes</h1>
 
 <form class=" w-3/5 bg-white shadow-md m-10 px-8 py-8"  method="POST" enctype="multipart/form-data">
@@ -27,5 +28,5 @@
 </div>
 
 </form>
-
+</div>
 {%endblock%}
