--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -1,36 +1,29 @@
 {% extends 'user/base.html' %}
+
 {% block content %}
-<h1 class="text-2xl m-10 font-bold"> + Add Recipes</h1>
+<div class="pt-20">
+    <h1 class="text-2xl m-10 font-bold">+ Add Recipes</h1>
 
-<form class=" w-3/5 bg-white shadow-md m-10 px-8 py-8"  method="POST" enctype="multipart/form-data">
-    {%csrf_token%}
-<div class="mb-4">
-    <label class="block text-gray-700 text-sm font-bold mb-2" for="">recipe Name </label>
-    <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Name" type="text" name="name ">
+    <form class="w-3/5 bg-white shadow-md m-10 px-8 py-8" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="">recipe Name </label>
+            <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Name" type="text" name="name ">
+        </div>
+
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Desc </label>
+            <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Description" type="text" name="desc" id="desc">
+        </div>
+
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Image </label>
+            <input class="py-2 " type="file" accept="image/*" name="upload" id="upload" >
+        </div>
+
+        <div class="mb-4">
+            <input class="bg-green-500 text-white px-5 py-2" type="submit" name="Add Recipe" value="Add Recipe" id="">
+        </div>
+    </form>
 </div>
-
-
-<div class="mb-4">
-    <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Desc </label>
-    <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Description"  type="text" name="desc" id="desc">
-</div>
-
-<div class="mb-4">
-    <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Image </label>
-    <input class="py-2 " type="file" accept="image/*" name="upload" id="upload" >
-</div>
-
-
-<div class="mb-4">
-    <input class="bg-green-500 text-white px-5 py-2"  type="submit" name="Add Recipe" value="Add Recipe" id="">
-
-</div>
-
-
-
-
-
-
-</form>
-
-{%endblock%}
+{% endblock %}
