--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -4,34 +4,43 @@
 {% load static %}
 
 {% block content %}
+<html>
+<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">    
+<body style="background-color: bisque;">
+    <style>
+        a {
+          text-decoration: none;
+        }
+        </style>
 
 <main class="mt-10 mx-auto max-w-7xl px-4 sm:st-12 sm:px-6 md:mt-16 lg:mt-20 ">
     
-        <div class="sm:text-center lg:text-left">
-            <h1 class="text-4xl font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-            <span class="block xl:inline"> Social Kitchen </span>
-            <span class="block text-green-500 xl:inline"> Recipes </span>
+        <div class="sm:text-center lg:text-left d-flex align-items-center justify-content-center ">
+            <h1 class="text-4xl font-extrabold text-gray-900 sm:text-5xl md:text-6xl mt-4">
+            <span class="block xl:inline "> Social Kitchen </span>
+            <span class="block text-red-500 xl:inline"> Recipes </span>
         </h1>
        
         </div>
     
 </main>
 
-<div class="flex mt-5 p-10 justify-center">
-<h2 class="text-3xl font-normal mt-0 mb-2 text-gray-500" >Recent Recipes </h2>
-</div>
 
-<div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
+<div   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
 
     {%for recipe in recipes %}
     
     <a href="{% url 'user:recipe_detail' recipe.id %}">
-        <div class="rounded overflow-hidden shadow-lg">
+        <div style="background-color: white;" class="rounded overflow-hidden shadow-lg">
+            
             <img class="w-full" src="{{recipe.image.url}}">
-            <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2">{{recipe.name}}</div>
-            <div class="font-bold mb-2">Posted By : <span class="text-indigo-500">{{recipe.chef}}</span></div>
+        
+            <div class="px-6 py-4 " >
+            <div class="font-bold text-xl mb-2" >{{recipe.name}}</div>
+            <div class="font-bold mb-2" style="text-decoration: none;" >Posted By : <span class="text-indigo-500">{{recipe.chef}}</span></div>
             <p class="text-gray-700 text-base">{{recipe.desc}} </p>
+            
+            
        
             
             
@@ -44,7 +53,10 @@
 </div>
 
  
-   
+
 
 
 {% endblock%}
+
+</body>
+</html>
