Design the profile page of the user

--- a/SocialKitchen/user/templates/user/base.html
+++ b/SocialKitchen/user/templates/user/base.html
@@ -39,6 +39,8 @@
           <li><a class="navbar-brand" href="/recipes">Recipes</a></li>
           <li><a class="navbar-brand" href="/recipes/add">Add Recipe</a></li>
           <li><a class="navbar-brand" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a href="{% url 'user:profile' %}">User Profiles</a></li>
+          
         </ul>
       </nav><!-- .navbar -->
 
