--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -1,4 +1,3 @@
-
 {% extends 'user/base.html' %}
 
 {% load static %}
@@ -20,11 +19,17 @@
             <span class="block xl:inline "> Social Kitchen </span>
             <span class="block text-red-500 xl:inline"> Recipes </span>
         </h1>
-       
+    
         </div>
     
 </main>
 
+<div class="flex justify-center">
+  <form method="GET" action="{% url 'user:recipes' %}">
+    <input type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
+    <button type="submit">Search</button>
+  </form>
+</div>
 
 <div   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
 
@@ -39,22 +44,33 @@
             <div class="font-bold text-xl mb-2" >{{recipe.name}}</div>
             <div class="font-bold mb-2" style="text-decoration: none;" >Posted By : <span class="text-indigo-500">{{recipe.chef}}</span></div>
             <p class="text-gray-700 text-base">{{recipe.desc}} </p>
-            
-            
-       
-            
-            
         </div>
-</div>
+    </div>
 </a>
 
     {%endfor%}
 
 </div>
 
- 
-
-
+<div class="pagination justify-content-center">
+    {% if recipes.has_previous %}
+        <a href="?page=1">&laquo;</a>
+        <a href="?page={{ recipes.previous_page_number }}">&lsaquo;</a>
+    {% endif %}
+    
+    {% for i in recipes.paginator.page_range %}
+        {% if recipes.number == i %}
+            <a class="active" href="#">{{ i }}</a>
+        {% elif i > recipes.number|add:'-3' and i < recipes.number|add:'3' %}
+            <a href="?page={{ i }}">{{ i }}</a>
+        {% endif %}
+    {% endfor %}
+    
+    {% if recipes.has_next %}
+        <a href="?page={{ recipes.next_page_number }}">&rsaquo;</a>
+        <a href="?page={{ recipes.paginator.num_pages }}">&raquo;</a>
+    {% endif %}
+</div>
 
 {% endblock%}
 
