--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -26,8 +26,8 @@
 
 <div class="flex justify-center">
   <form method="GET" action="{% url 'user:recipes' %}">
-    <input type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
-    <button type="submit">Search</button>
+    <input class="btn btn-light" type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
+    <button type="submit" class="btn btn-success">Search</button>
   </form>
 </div>
 
