--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -36,9 +36,11 @@
     {%for recipe in recipes %}
     
     <a href="{% url 'user:recipe_detail' recipe.id %}">
-        <div style="background-color: white;" class="rounded overflow-hidden shadow-lg">
+        <div style="background-color: white ;" class="rounded overflow-hidden shadow-lg">
             
-            <img class="w-full" src="{{recipe.image.url}}">
+            <div style="background-color: white; width: 100%; padding-top: 75%; position: relative;">
+                <img style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;" src="{{ recipe.image.url }}">
+            </div>
         
             <div class="px-6 py-4 " >
             <div class="font-bold text-xl mb-2" >{{recipe.name}}</div>
