--- a/SocialKitchen/user/static/user/main.css
+++ b/SocialKitchen/user/static/user/main.css
@@ -1,3 +1,42 @@
+/* Style the button */
+.dropdown-btnn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-contentt {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Show the dropdown content when the button is clicked */
+.dropdown:hover .dropdown-contentt {
+  display: block;
+}
+
+/* Style the links inside the dropdown */
+.dropdown-contentt a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Add a background color on hover */
+.dropdown-contentt a:hover {
+  background-color: #f1f1f1;
+}
+
+
+
 
 .fa {
     padding: 5px;
