--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 <html>
-<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">    
+<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
+<link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 <body style="background-color: bisque;">
     <style>
         a {
@@ -13,7 +15,9 @@
         </style>
 
 <main class="mt-10 mx-auto max-w-7xl px-4 sm:st-12 sm:px-6 md:mt-16 lg:mt-20 ">
-    
+   
+      
+      
         <div class="sm:text-center lg:text-left d-flex align-items-center justify-content-center ">
             <h1 class="text-4xl font-extrabold text-gray-900 sm:text-5xl md:text-6xl mt-4">
             <span class="block xl:inline "> Social Kitchen </span>
@@ -23,15 +27,35 @@
         </div>
     
 </main>
+<div class="container">
+<div class="dropdown">
+    <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"><i class="bi bi-tag"></i>Categories</button>
+    <div class="dropdown-contentt">
+      <a href="#">Chicken</a>
+      <a href="#">Beef</a>
+      <a href="#">Seafood</a>
+      <a href="#">Pizza</a>
+      <a href="#">Pasta</a>
+      <a href="#">Soups</a>
+      <a href="#">Drinks</a>
+      
+      <a href="#">Vegetables</a>
+      <a href="#">Desserts</a>
+      
+    </div>
+  </div>
+</div>
 
-<div class="flex justify-center">
+
+<div class="flex justify-center ">
   <form method="GET" action="{% url 'user:recipes' %}">
     <input class="btn btn-light" type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
     <button type="submit" class="btn btn-success">Search</button>
   </form>
 </div>
 
-<div   class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
+<div class="grid-container">
+    <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
 
     {%for recipe in recipes %}
     
@@ -53,6 +77,7 @@
     {%endfor%}
 
 </div>
+
 
 <div class="pagination justify-content-center">
     {% if recipes.has_previous %}
