--- a/SocialKitchen/user/templates/user/updaterecipe.html
+++ b/SocialKitchen/user/templates/user/updaterecipe.html
@@ -14,7 +14,14 @@
     <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Desc </label>
     <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Description" value="{{recipe.desc}}"  type="text" name="desc" id="desc">
 </div>
-
+<div class="form-group">
+    <label for="ingredients">Ingredients</label>
+    <textarea class="form-control" id="ingredients" name="ingredients" rows="3" required>{{ recipe.ingredients }}</textarea>
+</div>
+<div class="form-group">
+    <label for="cooking_instructions">Cooking Instructions</label>
+    <textarea class="form-control" id="cooking_instructions" name="cooking_instructions" rows="5" required>{{ recipe.cooking_instructions }}</textarea>
+</div>
 <div class="mb-4">
     <img class="w-20 h-20" src="{{recipe.image.url}}">
     <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Image </label>
