styling myrecipes page

--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -9,7 +9,7 @@
         <form class="w-3/5 bg-white shadow-md m-10 px-8 py-8" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="">recipe Name </label>
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="">Recipe Name </label>
                 <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Name" type="text" name="name ">
             </div>
 
