--- a/SocialKitchen/user/templates/user/base.html
+++ b/SocialKitchen/user/templates/user/base.html
@@ -28,7 +28,7 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
        
       </a>
-      
+      {% block navbar %}
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="/" style="text-decoration:none;" >Home</a></li>
@@ -43,7 +43,7 @@
           
         </ul>
       </nav><!-- .navbar -->
-    
+      {% endblock %}
 
       <div class="col-sm-6 d-flex justify-content-end align-items-center">
 
