--- a/SocialKitchen/user/templates/user/chefprofile.html
+++ b/SocialKitchen/user/templates/user/chefprofile.html
@@ -1,31 +1,38 @@
 {% extends 'user/base.html' %}
 
 {% block content %}
-
-<div class="grid p-10 grid-cols-1 lg:grid-cols-3 sm:grid-cols-1">
-    <div class="rounded shadow-lg">
-   
-   <!-- Header Section -->
-    <div class="flex flex-col items-center justify-center p-5">
-        <img src="{{cheff.profile.image.url}}" class="w-24 h-24 rounded-full object-cover">
-        <h2 class="text-xl font-bold mt-2">{{ cheff.username }}</h2>
-        <p class="text-gray-500 text-sm">{{ cheff.profile.description }}</p>
+<section class="vh-100" style="background-color: #9de2ff;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-10 col-lg-8 col-xl-6">
+        <div class="card" style="border-radius: 15px; max-width: 100%;">
+          <div class="card-body p-4 " >
+            <div class="d-flex text-black flex-wrap">
+              <div class="flex-shrink-0">
+                <img src="{{cheff.profile.image.url}}" alt="Profile Image" class="img-fluid mr-3" style="width: 180px; border-radius: 10px;">
+              </div>
+              <div class="flex-grow-1 ms-3">
+                <h5 class="mb-1">{{ cheff.username }}</h5>
+                <p class="mb-2 pb-1" style="color: #2b2a2a;">Contact Information</p>
+                <div class="d-flex justify-content-start rounded-3 p-2 mb-2" style="background-color: #efefef;">
+                  <div>
+                    <p class="mb-0 mr-3">📧 {{cheff.email}}</p>
+                  </div>
+                  
+                  <div>
+                    <p class="mb-0">📞 {{cheff.profile.contact_number}}</p>
+                  </div>
+                </div>
+                <div class="d-flex pt-1">
+                  <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Chat</button>
+                  <button type="button" class="btn btn-primary flex-grow-1">Follow</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    
-    <!-- Contact Section -->
-    <div class="px-6 py-4">
-        <div class="font-bold text-xl mb-2">Contact Information:</div>
-        <p class="text-gray-500 text-sm">📞 {{cheff.profile.contact_number}}</p>
-        <p class="text-gray-500 text-sm">📧 {{cheff.email}}</p>
-        
-        
-       
-    </div>
-  
-    
- 
-    
-    
-</div>
-</div>
+  </div>
+</section>
 {% endblock %}
