--- a/SocialKitchen/user/templates/user/createprofile.html
+++ b/SocialKitchen/user/templates/user/createprofile.html
@@ -1,6 +1,11 @@
 {% extends 'user/base.html'%}
+{%load static%}
 {% block content %}
-
+<body  >
+<div class="mt-20 d-flex align-items-center">
+    
+        <img src="{% static 'user/images/chef.jpg' %}" width="50%" class="ml-3">
+      
 <form method="post" enctype="multipart/form-data" class="bg-white shadow-md m-10 w-3/5 rounded px-8 pt-6 pb-8 mb-4 ">
  {% csrf_token %} 
 <div class="mb-4">
@@ -11,12 +16,18 @@
 
 <div class="mb-4">
     <label for="">Contact Number</label>
-    <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700 " placeholder="99999" type="text" accept="image/*"  name="contact_number" id="contact_number">
+    <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700 " placeholder="+96112345678" type="text" accept="image/*"  name="contact_number" id="contact_number">
 </div>
 
-<input class="bg-green-500 text-white px-5 py-2 " name="Add" value="Add" type="submit">
+<input class="bg-yellow-500 text-white px-5 py-2 rounded " name="Add" value="Add" type="submit">
+<input class="bg-yellow-500 text-white px-5 py-2 rounded" name="Edit" value="Edit" type="submit">
 
 </form>
 
+
+
 {%endblock%}
 
+</div>
+
+</body>
