--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<body style="background-image: url('{% static 'user/images/adds.avif' %}')">
+<body style="background-image: url('{% static 'user/images/adds.avif' %}');">
     <div class="pt-20">
         <h1 class="text-5xl m-10 font-bold">+ Add Recipes</h1>
 
@@ -24,18 +24,6 @@
             <div class="form-group">
                 <label for="cooking_instructions">Cooking Instructions</label>
                 <textarea class="form-control" id="cooking_instructions" name="cooking_instructions" rows="5" required></textarea>
-            </div>
-
-            <div class="form-group">
-                <p>Choose Category: </p>
-                <input type="radio" id="LeanMeat" name="category" value="lean_meat">
-                <label for="LeanMeat">Lean Meat</label><br>
-                <input type="radio" id="WholeGrains" name="category" value="whole_grains">
-                <label for="WholeGrains">Whole Grains</label><br>
-                <input type="radio" id="Vegan" name="category" value="vegan">
-                <label for="Vegan">Vegan</label><br>
-                <input type="radio" id="Dairy" name="category" value="dairy">
-                <label for="Dairy">Dairy</label><br>
             </div>
 
             <div class="mb-4">
