styling profile page and changing some migrations

--- a/SocialKitchen/user/templates/user/chefprofile.html
+++ b/SocialKitchen/user/templates/user/chefprofile.html
@@ -1,8 +1,9 @@
 {% extends 'user/base.html' %}
-
+{% load static %}
 {% block content %}
-<section class="vh-100" style="background-color: #9de2ff;">
-  <div class="container py-5 h-100">
+<body style="background-color: silver;">
+<section >
+  <div class="container py-5 h-100 ">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-10 col-lg-8 col-xl-6">
         <div class="card" style="border-radius: 15px; max-width: 100%;">
@@ -36,3 +37,4 @@
   </div>
 </section>
 {% endblock %}
+</body>
