--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -7,6 +7,7 @@
       <li><a class="navbar-brand" href="/recipes">Recipes</a></li>
       <li><a class="navbar-brand" href="/recipes/add">Add Recipe</a></li>
       <li><a class="navbar-brand" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
       <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
       </nav>
 {% endblock %}
