--- a/SocialKitchen/user/templates/user/myprofile.html
+++ b/SocialKitchen/user/templates/user/myprofile.html
@@ -1,5 +1,7 @@
 {% extends 'user/base.html' %}
 
+
+
 {% block content %}
 
 <div class="grid p-10 grid-cols-1 lg:grid-cols-3 sm:grid-cols-1">
@@ -25,6 +27,6 @@
 </div>
 
 </div>
-
+<h1> Welcome {{user.username}} To Your Profile </h1>
 
 {% endblock %}
