--- a/SocialKitchen/user/templates/user/createprofile.html
+++ b/SocialKitchen/user/templates/user/createprofile.html
@@ -1,33 +1,35 @@
 {% extends 'user/base.html'%}
 {%load static%}
 {% block content %}
-<body  >
-<div class="mt-20 d-flex align-items-center">
-    
-        <img src="{% static 'user/images/chef.jpg' %}" width="50%" class="ml-3">
-      
-<form method="post" enctype="multipart/form-data" class="bg-white shadow-md m-10 w-3/5 rounded px-8 pt-6 pb-8 mb-4 ">
- {% csrf_token %} 
-<div class="mb-4">
-<label for="">Upload Profile Image </label>
-<input class="py-2" type="file" accept="image/*"  name="upload" id="upload">
+<html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+      </head>
 
-</div>
+<body>
+    <div class="mt-20 d-flex align-items-center">
+        <div class="d-flex flex-column">
+            <img src="{% static 'user/images/chef.jpg' %}" width="75%" class="ml-3">
+            <div class="section-header"> <p> Create Your Own <span> Profile ! </span></p>  </div>
+        </div>
+        <form method="post" enctype="multipart/form-data" class="bg-white shadow-md m-10 w-3/5 rounded px-8 pt-6 pb-8 mb-4 ">
+            {% csrf_token %} 
+            <div class="mb-4">
+                <label for="">Upload Profile Image </label>
+                <input class="py-2" type="file" accept="image/*"  name="upload" id="upload">
+            </div>
+            <div class="mb-4">
+                <label for="">Contact Number</label>
+                <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700 " placeholder="+96112345678" type="text" accept="image/*"  name="contact_number" id="contact_number">
 
-<div class="mb-4">
-    <label for="">Contact Number</label>
-    <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700 " placeholder="+96112345678" type="text" accept="image/*"  name="contact_number" id="contact_number">
-</div>
-
-<input class="bg-yellow-500 text-white px-5 py-2 rounded " name="Add" value="Add" type="submit">
-<input class="bg-yellow-500 text-white px-5 py-2 rounded" name="Edit" value="Edit" type="submit">
-
-</form>
-
-
+            </div>
+            <input class="bg-yellow-500 text-white px-5 py-2 rounded " name="Add" value="Add" type="submit">
+            <input class="bg-yellow-500 text-white px-5 py-2 rounded" name="Edit" value="Edit" type="submit">
+        </form>
+    </div>
+</body>
 
 {%endblock%}
-
-</div>
-
-</body>
+</html>
