--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -18,8 +18,7 @@
                 <input class="shadow appearance-none border rounded py-2 px-3 mr-10 text-gray-700" placeholder="Description" type="text" name="desc" id="desc">
             </div>
             <div class="form-group">
-                <label for="ingredients">Ingredients</label>
-                <textarea class="form-control" id="ingredients" name="ingredients" rows="3" required></textarea>
+                {{form.as_p}}
             </div>
             <div class="form-group">
                 <label for="cooking_instructions">Cooking Instructions</label>
