added scroll bar and make some design changes  in add & update recipes

--- a/SocialKitchen/user/static/user/main.css
+++ b/SocialKitchen/user/static/user/main.css
@@ -1,3 +1,11 @@
+.scroll {
+  overflow-y: scroll;
+  max-height: 600px; /* adjust the value to fit your needs */
+}
+
+
+
+
 /* Style the button */
 .dropdown-btnn {
   background-color: #4CAF50;
