--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -1,10 +1,42 @@
 {% extends 'user/base.html' %}
-{% load static %}
 
+{% block navbar %}
+
+<a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+    <h1>Social Kitchen <span>.</span></h1>  
+  </a>
+<nav id="navbar" class="navbar " >
+    <ul>
+      <li><a href="/" style="text-decoration:none;" >Home</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Recipes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+          <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+        </ul>
+      </li>
+      </nav>
+{% endblock %}
+
+{% load static %}
 {% block content %}
-<body style="background-image: url('{% static 'user/images/adds.avif' %}');">
-    <div class="pt-20">
-        <h1 class="text-5xl m-10 font-bold">+ Add Recipes</h1>
+<html>
+<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
+<link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<body style="background-image: url('{% static 'user/images/adds.avif' %}'); ">
+    
+    <div class="pt-20 row justify-content-center " >
+        
+        <div class="  section-header" > <p> Add <span> Recipes  </span> <i class="bi bi-plus"></i></p>   </div>
+        
 
         <form class="w-3/5 bg-white shadow-md m-10 px-8 py-8" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -49,3 +81,4 @@
     </div>
 </body>
 {% endblock %}
+</html>
