Added Recommendation Feature that allows the user to get recommended recipes for the ingredients available for him

--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -20,6 +20,7 @@
           <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
         </ul>
       </li>
       </nav>
