--- a/SocialKitchen/user/templates/user/chefprofile.html
+++ b/SocialKitchen/user/templates/user/chefprofile.html
@@ -1,6 +1,37 @@
 {% extends 'user/base.html' %}
+
+{% block navbar %}
+
+
+<nav id="navbar" class="navbar " >
+    <ul>
+        <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+            <h1>Social Kitchen <span>.</span></h1>  
+          </a>
+      <li><a href="/" style="text-decoration:none;" >Home</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Recipes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+          <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
+        </ul>
+      </li>
+      </nav>
+{% endblock %}
+
+
+
+
 {% load static %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
 <body style="background-color: silver;">
 <section >
   <div class="container py-5 h-100 ">
@@ -25,7 +56,7 @@
                   </div>
                 </div>
                 <div class="d-flex pt-1">
-                  <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Chat</button>
+                 <a href="/recipes/mylistings"> <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Recipes</button></a>
                   <button type="button" class="btn btn-primary flex-grow-1">Follow</button>
                 </div>
               </div>
