--- a/SocialKitchen/user/templates/user/createprofile.html
+++ b/SocialKitchen/user/templates/user/createprofile.html
@@ -1,22 +1,55 @@
 {% extends 'user/base.html'%}
+
+{% block navbar %}
+
+
+<nav id="navbar" class="navbar " >
+    <ul>
+        <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+            <h1>Social Kitchen <span>.</span></h1>  
+          </a>
+      <li><a href="/" style="text-decoration:none;" >Home</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Recipes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+          <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
+        </ul>
+      </li>
+      </nav>
+{% endblock %}
+
 {%load static%}
 {% block content %}
 <html>
     <head>
-      <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
+        <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
       </head>
 
 <body>
     <div class="mt-20 d-flex align-items-center">
         <div class="d-flex flex-column">
-            <img src="{% static 'user/images/chef.jpg' %}" width="75%" class="ml-3">
-            <div class="section-header"> <p> Create Your Own <span> Profile ! </span></p>  </div>
+            
+            <img src="{% static 'user/images/chef.jpg' %}" width="75%" >
+            
         </div>
+        <div class="section-header"> <p> Create Your Own <span> Profile  </span></p>  </div>
         <form method="post" enctype="multipart/form-data" class="bg-white shadow-md m-10 w-3/5 rounded px-8 pt-6 pb-8 mb-4 ">
             {% csrf_token %} 
+            
             <div class="mb-4">
+                
                 <label for="">Upload Profile Image </label>
                 <input class="py-2" type="file" accept="image/*"  name="upload" id="upload">
             </div>
