--- a/SocialKitchen/user/templates/user/mylistings.html
+++ b/SocialKitchen/user/templates/user/mylistings.html
@@ -1,4 +1,32 @@
 {% extends 'user/base.html' %}
+
+
+{% block navbar %}
+
+
+<nav id="navbar" class="navbar " >
+    <ul>
+        <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+            <h1>Social Kitchen <span>.</span></h1>  
+          </a>
+      <li><a href="/" style="text-decoration:none;" >Home</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Recipes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+          <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
+        </ul>
+      </li>
+      </nav>
+{% endblock %}
+
  {% load static %} 
 {% block content %}
 <html>
@@ -12,15 +40,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
-<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
+  <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 
 </head>
 
-<body style="background-color: bisque;">
+<body style="background-image: url('{% static 'user/images/sss.jpg' %}');">
     <div class="text-2xl m-10 p-10 font-bold">
         <div class="section-header mt-5">   <p>My Recipes 📄</p> </div>
 
