--- a/SocialKitchen/user/templates/user/myprofile.html
+++ b/SocialKitchen/user/templates/user/myprofile.html
@@ -1,9 +1,40 @@
 {% extends 'user/base.html' %}
 
+{% block navbar %}
 
 
+<nav id="navbar" class="navbar " >
+    <ul>
+        <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+            <h1>Social Kitchen <span>.</span></h1>  
+          </a>
+      <li><a href="/" style="text-decoration:none;" >Home</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+      <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Recipes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+          <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+          <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
+        </ul>
+      </li>
+      </nav>
+{% endblock %}
+{% load static %}
 {% block content %}
 
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
+<link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
+<body >
 <div class="grid p-10 grid-cols-1 lg:grid-cols-3 sm:grid-cols-1">
     <div class="rounded shadow-lg">
    
@@ -27,6 +58,5 @@
 </div>
 
 </div>
-<h1> Welcome {{user.username}} To Your Profile </h1>
-
+</body>
 {% endblock %}
