added hislistings.html page that allows the user to check the recipes of another user when visiting his profile

--- a/SocialKitchen/user/templates/user/chefprofile.html
+++ b/SocialKitchen/user/templates/user/chefprofile.html
@@ -56,7 +56,7 @@
                   </div>
                 </div>
                 <div class="d-flex pt-1">
-                 <a href="/recipes/mylistings"> <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Recipes</button></a>
+                 <a href="/hislistings/"> <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Recipes</button></a>
                   <button type="button" class="btn btn-primary flex-grow-1">Follow</button>
                 </div>
               </div>
